@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,6 +22,8 @@
  */
 package org.openjdk.skara.vcs.openjdk.converter;
 
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.openjdk.skara.test.TemporaryDirectory;
 import org.openjdk.skara.test.TestableRepository;
 import org.openjdk.skara.vcs.*;
@@ -41,8 +43,30 @@ import java.util.stream.Collectors;
 import java.time.ZonedDateTime;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 class GitToHgConverterTests {
+
+    private static boolean hgAvailable = true;
+
+    @BeforeAll
+    static void checkHgAvailability() {
+        try {
+            var pb = new ProcessBuilder("hg", "--version");
+            pb.redirectErrorStream(true);
+            var process = pb.start();
+            process.waitFor();
+            hgAvailable = (process.exitValue() == 0);
+        } catch (Exception e) {
+            hgAvailable = false;
+        }
+    }
+
+    @BeforeEach
+    void assumeHgAvailable() {
+        assumeTrue(hgAvailable);
+    }
+
     void assertCommitEquals(ReadOnlyRepository gitRepo, Commit gitCommit, ReadOnlyRepository hgRepo, Commit hgCommit) throws IOException {
         assertEquals(gitCommit.authored(), hgCommit.authored());
         assertEquals(gitCommit.isInitialCommit(), hgCommit.isInitialCommit());
@@ -413,6 +437,72 @@ class GitToHgConverterTests {
         }
     }
 
+    /**
+     * Test converting a merge commit where the first parent is an ancestor of the second parent
+     */
+    @Test
+    void convertMergeOfDescendant() throws IOException {
+        try (var hgRoot = new TemporaryDirectory();
+             var gitRoot = new TemporaryDirectory()) {
+            var gitRepo = TestableRepository.init(gitRoot.path(), VCS.GIT);
+            var readme = gitRoot.path().resolve("README.md");
+
+            Files.writeString(readme, "First line");
+            gitRepo.add(readme);
+            var first = gitRepo.commit("First line", "Foo Bar", "foo@openjdk.org");
+
+            var otherBranch = gitRepo.branch(first, "other");
+            gitRepo.checkout(otherBranch);
+
+            Files.writeString(readme, "Second line\n", StandardOpenOption.APPEND);
+            gitRepo.add(readme);
+            gitRepo.commit("Second line on other branch", "Foo Bar", "foo@openjdk.org");
+
+            gitRepo.checkout(gitRepo.defaultBranch(), false);
+
+            gitRepo.merge(otherBranch, Repository.FastForward.DISABLE);
+            gitRepo.commit("Merge", "Foo Bar", "foo@openjdk.org");
+
+            var hgRepo = TestableRepository.init(hgRoot.path(), VCS.HG);
+            var converter = new GitToHgConverter();
+            var marks = converter.convert(gitRepo, hgRepo);
+            assertReposEquals(marks, gitRepo, hgRepo);
+        }
+    }
+
+    /**
+     * Test converting a merge commit where the second parent is an ancestor of the first parent
+     */
+    @Test
+    void convertMergeOfAncestor() throws IOException {
+        try (var hgRoot = new TemporaryDirectory();
+             var gitRoot = new TemporaryDirectory()) {
+            var gitRepo = TestableRepository.init(gitRoot.path(), VCS.GIT);
+            var readme = gitRoot.path().resolve("README.md");
+
+            Files.writeString(readme, "First line");
+            gitRepo.add(readme);
+            var first = gitRepo.commit("First line", "Foo Bar", "foo@openjdk.org");
+
+            var otherBranch = gitRepo.branch(first, "other");
+            gitRepo.checkout(otherBranch);
+
+            Files.writeString(readme, "Second line\n", StandardOpenOption.APPEND);
+            gitRepo.add(readme);
+            var otherBranchHead = gitRepo.commit("Second line on other branch", "Foo Bar", "foo@openjdk.org");
+
+            var merge = gitRepo.commit("Merge", "Foo Bar", "foo@openjdk.org", null, "Foo Bar", "" +
+                    "foo@openjdk.org", null, List.of(otherBranchHead, first), gitRepo.tree(otherBranchHead));
+            gitRepo.checkout(gitRepo.defaultBranch());
+            gitRepo.reset(merge, true);
+
+            var hgRepo = TestableRepository.init(hgRoot.path(), VCS.HG);
+            var converter = new GitToHgConverter();
+            var marks = converter.convert(gitRepo, hgRepo);
+            assertReposEquals(marks, gitRepo, hgRepo);
+        }
+    }
+
     private void cloneAndConvertAndVerify(String repo) throws IOException {
         try (var hgRoot = new TemporaryDirectory(false);
              var gitRoot = new TemporaryDirectory(false)) {
@@ -444,7 +534,7 @@ class GitToHgConverterTests {
             var hgRepo = TestableRepository.init(hgRoot.path(), VCS.HG);
             var converter = new GitToHgConverter();
             var marks = converter.convert(gitRepo, hgRepo);
-            var lastMark = marks.get(marks.size() - 1);
+            var lastMark = marks.getLast();
             assertEquals(second, lastMark.git());
             assertTrue(lastMark.tag().isPresent());
 
